--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/preset-env": "^7.7.4",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-prismjs": "^1.1.1",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.5",
     "cross-env": "^6.0.3",
@@ -75,6 +76,7 @@
     "hogan.js": "^3.0.2",
     "normalize.css": "^8.0.1",
     "p5": "^0.10.2",
-    "page": "^1.11.5"
+    "page": "^1.11.5",
+    "prismjs": "^1.17.1"
   }
 }
